[package]
name = "axprocess"
version = "0.1.0"
edition = "2021"
authors = ["Jiayu Chen <c0percn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axmem = { path = "../axmem" }
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
axsyscall = { path = "../axsyscall" }

crate_interface = { path = "../../crates/crate_interface" }
kernel_guard = { path = "../../crates/kernel_guard" }

riscv = "0.10.1"
xmas-elf = "0.9.0"
