[package]
name = "axprocess"
version = "0.1.0"
edition = "2021"
authors = ["Jiayu Chen <c0percn@gmail.com>"]

[features]
fs = ["dep:axfs", "dep:axio"]
default = ["fs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axmem = { path = "../axmem" }
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig" }
axsyscall = { path = "../axsyscall" }
axfs = { path = "../axfs", optional = true }
axio = { path = "../../crates/axio", optional = true }

crate_interface = { path = "../../crates/crate_interface" }
kernel_guard = { path = "../../crates/kernel_guard" }
scheduler = { path = "../../crates/scheduler" }
lazy_init = { path = "../../crates/lazy_init" }
spinlock = { path = "../../crates/spinlock" }

log = "0.4"
riscv = "0.10.1"
xmas-elf = "0.9.0"
