[package]
name = "axruntime"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = ["dep:axalloc"]
paging = ["alloc", "axhal/paging", "dep:lazy_init"]
multitask = ["alloc", "axtask/multitask"]
smp = ["axhal/smp", "spinlock/smp"]

fs = ["alloc", "paging", "axdriver/virtio-blk", "axfs/use-virtio-blk"] # TODO: remove "paging"
net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet"]
display = ["alloc", "paging", "axdriver/virtio-gpu", "dep:axdisplay"]

no_mmu = ["axhal/no_mmu", "axconfig/no_mmu"]
syscall = ["axhal/syscall", "axtask/syscall", "dep:axsyscall", "dep:num-traits", "dep:xmas-elf", "dep:axmem", "paging"]

default = []

[dependencies]
percpu = { path = "../../crates/percpu" }
kernel_guard = { path = "../../crates/kernel_guard" }
spinlock = { path = "../../crates/spinlock" }
lazy_init = { path = "../../crates/lazy_init", optional = true }
crate_interface = { path = "../../crates/crate_interface" }
axalloc = { path = "../axalloc", optional = true }
axconfig = { path = "../axconfig" }
axdriver = { path = "../axdriver", optional = true }
axhal = { path = "../axhal" }
axlog = { path = "../axlog" }
axfs = { path = "../axfs", optional = true }
axnet = { path = "../axnet", optional = true }
axdisplay = { path = "../axdisplay", optional = true }
axtask = { path = "../axtask", default-features = false }
axsyscall = { path = "../axsyscall", optional = true }
axmem = { path = "../axmem", optional = true }
cfg-if = "1.0.0"
num-traits = { version = "0.2.15", default-features = false, optional = true }
xmas-elf = { version = "0.9.0", optional = true }
