[package]
name = "axsyscall"
version = "0.1.0"
edition = "2021"
authors = ["Jiayu Chen <c0percn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crate_interface = { path = "../../crates/crate_interface" }
num-derive = "0.3.3"
num-traits = { version = "0.2.15", default-features = false }
