[package]
name = "axtask"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = ["percpu?/sp-naive"]
multitask = [ # without the feature, can still use the empty yield_now() and exit()
    "dep:axconfig",
    "dep:percpu",
    "dep:spinlock",
    "dep:lazy_init",
    "dep:memory_addr",
    "dep:scheduler",
    "dep:timer_list",
]
preempt = ["percpu?/preempt"]

sched_fifo = ["multitask"]
sched_rr = ["multitask", "preempt"]

default = []

[dependencies]
cfg-if = "1.0"
log = "0.4"
axhal = { path = "../axhal" }
axconfig = { path = "../axconfig", optional = true }
axsyscall = { path = "../axsyscall", optional = true }
axmem = { path = "../axmem", optional = true }
percpu = { path = "../../crates/percpu", optional = true }
spinlock = { path = "../../crates/spinlock", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
memory_addr = { path = "../../crates/memory_addr", optional = true }
scheduler = { path = "../../crates/scheduler", optional = true }
timer_list = { path = "../../crates/timer_list", optional = true }
kernel_guard = { path = "../../crates/kernel_guard" }
crate_interface = { path = "../../crates/crate_interface" }
riscv = { version = "0.10.1", optional = true }
xmas-elf = { version = "0.9.0", optional = true }

[dev-dependencies]
rand = "0.8"
axhal = { path = "../axhal", features = ["fp_simd"] }
axtask = { path = ".", features = ["test"] }
